--- a/ojs/plugins/importexport/native/locale/pt_PT/locale.xml
+++ b/ojs/plugins/importexport/native/locale/pt_PT/locale.xml
@@ -92,7 +92,7 @@ Os seguintes formatos são aceitos:
 	<message key="plugins.importexport.native.import.error.illegalUrl">URL "{$url}" da edição "{$issueTitle}" ilegal. Importações via Web suportam apenas métodos http, https, ftp, ou ftps.</message>
 	<message key="plugins.importexport.native.import.error.unknownSuppFileType">O tipo de ficheiro suplementar "{$suppFileType}" é desconhecido.</message>
 	<message key="plugins.importexport.native.import.error.couldNotCopy">O URL "{$url}" não pode ser copiada para um ficheiro local.</message>
-	<message key="plugins.importexport.native.import.error.duplicatePublicId">O ID público para importar a edição "{$issueTitle}" já se encontra em uso pela edição "{$otherIssueTitle}".</message>
+	<message key="plugins.importexport.native.import.error.duplicatePublicIssueId">O ID público para importar a edição "{$issueTitle}" já se encontra em uso pela edição "{$otherIssueTitle}".</message>
 	<message key="plugins.importexport.native.import.error.sectionTitleMissing">Não foi fornecido im título de secção para a edição "{$issueTitle}". Certifique-se que o documento XML esteja em conformidade com a DTD apropriada.</message>
 	<message key="plugins.importexport.native.import.error.sectionMismatch">A secção "{$sectionTitle}" da edição "{$issueTitle}" é compatível com uma revista existente, mas a abreviatura ("{$sectionAbbrev}") é compatível com outra secção.</message>
 	<message key="plugins.importexport.native.import.error.articleTitleMissing">Não foi fornecido um título de artigo na edição "{$issueTitle}", secção "{$sectionTitle}". Certifique-se de que o documento XML está em conformidade com a DTD apropriada, e que um título foi fornecido para o idioma da revista.</message>
