--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -84,6 +84,7 @@
 	<message key="common.completed">Completed</message>
 	<message key="common.confirm">Confirm</message>
 	<message key="common.content">Content</message>
+	<message key="common.contents">Contents</message>
 	<message key="common.considered">Considered</message>
 	<message key="common.continue">Continue</message>
 	<message key="common.copy">Copy</message>
