--- a/ops/locale/en_US/manager.xml
+++ b/ops/locale/en_US/manager.xml
@@ -158,6 +158,20 @@
 	<message key="manager.sections.wordCount">Word Count</message>
 	<message key="manager.sections.wordCountInstructions">Limit abstract word counts for this section (0 for no limit): </message>
 	<message key="manager.setup">Setup</message>
+	<message key="manager.setup.appearanceDescription">Various components of the journal appearance can be configured from this page, including header and footer elements, the journal style and theme, and how lists of information are presented to users.</message>
+	<message key="manager.setup.homepageContent">Journal Homepage Content</message>
+	<message key="manager.setup.homepageContentDescription">The journal homepage consists of navigation links by default. Additional homepage content can be appended by using one or all of the following options, which will appear in the order shown.</message>
+	<message key="manager.setup.pageHeaderDescription">A graphic version of the journal title and logo (.gif, .jpg, or .png file), possibly a smaller version of the one used on the homepage, can be uploaded to appear as a header on journal pages, which will replace the text version that otherwise appears.</message>
+	<message key="manager.setup.logo">Journal Logo</message>
+	<message key="manager.setup.logo.altText">Journal Logo</message>
+	<message key="manager.setup.useImageLogoDescription">An optional journal logo may be uploaded and used in conjunction with the image or text title configured above.</message>
+	<message key="manager.setup.pageFooter">Journal Page Footer</message>
+	<message key="manager.setup.pageFooterDescription">This is the footer of your journal. To change or update the footer, paste the HTML code in the textbox below. Examples could be another navigation bar, a counter, etc. This footer will appear on every page.</message>
+	<message key="manager.setup.layout">Journal Layout</message>
+	<message key="manager.setup.layoutDescription">Choose a journal theme and select layout components here. A journal style sheet may also be uploaded, which can be used to override style data in the system-wide style sheets and theme style sheet (if a theme is chosen).</message>
+	<message key="manager.setup.useStyleSheet">Journal style sheet</message>
+	<message key="manager.setup.contextName">Journal Name</message>
+	<message key="manager.setup.pageHeader">Journal Page Header</message>
 	<message key="manager.setup.aboutItemContent">Content</message>
 	<message key="manager.setup.addAboutItem">Add About Item</message>
 	<message key="manager.setup.addChecklistItem">Add Checklist Item</message>
